; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_main.c_vacm_next_access_rule.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_main.c_vacm_next_access_rule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vacm_access = type { i32 }

@vva = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vacm_access* @vacm_next_access_rule(%struct.vacm_access* %0) #0 {
  %2 = alloca %struct.vacm_access*, align 8
  %3 = alloca %struct.vacm_access*, align 8
  store %struct.vacm_access* %0, %struct.vacm_access** %3, align 8
  %4 = load %struct.vacm_access*, %struct.vacm_access** %3, align 8
  %5 = icmp eq %struct.vacm_access* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store %struct.vacm_access* null, %struct.vacm_access** %2, align 8
  br label %11

7:                                                ; preds = %1
  %8 = load %struct.vacm_access*, %struct.vacm_access** %3, align 8
  %9 = load i32, i32* @vva, align 4
  %10 = call %struct.vacm_access* @TAILQ_NEXT(%struct.vacm_access* %8, i32 %9)
  store %struct.vacm_access* %10, %struct.vacm_access** %2, align 8
  br label %11

11:                                               ; preds = %7, %6
  %12 = load %struct.vacm_access*, %struct.vacm_access** %2, align 8
  ret %struct.vacm_access* %12
}

declare dso_local %struct.vacm_access* @TAILQ_NEXT(%struct.vacm_access*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
